--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="menu">
       <div class="custom-select">
         <select id="diffSelect">
-                  <option value="15">Medium</option>                                    
+                  <option value="20">AASF</option>                                    
         </select>
       </div>
       <input id="startMazeBtn" type="button" onclick="makeMaze()" value="Start" />
