--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@
 
   <div id="page">
 
+    <div class="team flex">
+      <h1 class="te">Select your Team</h1>
+      <div class="select"> 
+        <input class="teams" readonly onclick="" id="team1" value="Team 1">
+        <input class="teams" readonly onclick="" id="team2" value="Team 2">
+        <input class="teams" readonly onclick="" id="team3" value="Team 3">
+        <input class="teams" readonly onclick="" id="team4" value="Team 4">
+        <input class="teams" readonly onclick="" id="team5" value="Team 5">
+        <input class="teams" readonly onclick="" id="team6" value="Team 6">
+        <input class="teams" readonly onclick="" id="team7" value="Team 7">
+        <input class="teams" readonly onclick="" id="team8" value="Team 8">
+        <input class="teams" readonly onclick="" id="team9" value="Team 9">
+        <input class="teams" readonly onclick="" id="team10" value="Team 10">
+        <input class="teams" readonly onclick="" id="team11" value="Team 11">
+        <input class="teams" readonly onclick="" id="team12" value="Team 12">
+        <input class="teams" readonly onclick="" id="team13" value="Team 13">
+        <input class="teams" readonly onclick="" id="team14" value="Team 14">
+        <input class="teams" readonly onclick="" id="team15" value="Team 15">
+        <input class="teams" readonly onclick="" id="team16" value="Team 16">
+        <input class="teams" readonly onclick="" id="team17" value="Team 17">
+        <input class="teams" readonly onclick="" id="team18" value="Team 18">
+        <input class="teams" readonly onclick="" id="team19" value="Team 19">
+        <input class="teams" readonly onclick="" id="team20" value="Team 20">
+        <input class="teams" readonly onclick="" id="team21" value="Team 21">
+        <input class="teams" readonly onclick="" id="team22" value="Team 22">
+        <input class="teams" readonly onclick="" id="team23" value="Team 23">
+        <input class="teams" readonly onclick="" id="team24" value="Team 24">
+        <input class="teams" readonly onclick="" id="team25" value="Team 25">
+      </div>
+    </div>
+
     <div id="Message-Container">
       <div id="message">
         <h1>Congratulations!</h1>
@@ -24,10 +55,11 @@
       <div class="mcqQues">
         <h1 id="question">Question</h1>
         <div class="line"></div>
-        <h3 class="options" id="option1">options</h3>
-        <h3 class="options" id="option2">options</h3>
-        <h3 class="options" id="option3">options</h3>
-        <h3 class="options" id="option4">options</h3>
+        <input class="options" readonly onclick="" id="option1" value="option">
+        <input class="options" readonly onclick="" id="option2" value="option">
+        <input class="options" readonly onclick="" id="option3" value="option">
+        <input class="options" readonly onclick="" id="option4" value="option">
+        <h5 id="wrong"></h5>
       </div>
     </div>
 
@@ -35,10 +67,10 @@
     <div id="menu">
       <div class="custom-select">
         <select id="diffSelect">
-          <option value="20">AASF</option>                                    
+          <option id="teamName" value="22">AASF</option>                                    
         </select>
       </div>
-      <input id="startMazeBtn" type="button" onclick="makeMaze()" value="Start" />
+      <!-- <input id="startMazeBtn" type="button" onclick="makeMaze()" value="Start" /> -->
     </div>
 
     <div id="view">
